--- a/node_app/nginx_test_app/docker-nginx/nginx.conf
+++ b/node_app/nginx_test_app/docker-nginx/nginx.conf
@@ -1,12 +1,11 @@
-#user nginx;
+#user nginx
 worker_processes 1;
 
 #error_log logs/error.log;
 #error_log logs/error.log notice;
 #error_log logs/error.log info;
 
-#pid
-logs/nginx.pid;
+#pid logs/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -15,18 +14,15 @@ events {
 http {
     include mime.types;
     default_type application/octet-stream;
-
     #access_log logs/host.access.log main;
-
     proxy_cache_path  /var/cache/nginx levels=1:2 keys_zone=one:8m max_size=3000m inactive=600m;
     proxy_temp_path /var/tmp;
-
     gzip on;
     gzip_comp_level 6;
     gzip_vary on;
     gzip_min_length  1000;
     gzip_proxied any;
-    gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_buffers 16 8k;
 
     sendfile            on;
@@ -40,19 +36,12 @@ http {
     #                '$status $body_bytes_sent "$http_referer" '
     #                '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log logs/access.log main;
-
-    sendfile on;
-    #tcp_nopush on;
-
-    keepalive_timeout 65;
-
-    #gzip on;
-
     upstream node_app {
         # 轻量级的负载均衡器　，处理用户的请求分发到对应的node_app进程上
-        server 127.0.0.1:3000;
-        server 127.0.0.1:8002;
+        least_conn;
+        server node1:8080 weight=10 max_fails=3 fail_timeout=30s;
+        server node2:8080 weight=10 max_fails=3 fail_timeout=30s;
+        server node3:8080 weight=10 max_fails=3 fail_timeout=30s;
     }
 
     server {
@@ -64,8 +53,7 @@ http {
         #charset koi8-r;
 
         #access_log logs/host.access.log main;
-        location ~ ^/(dist/|bower/|assets/|images/|javascripts/|js/|css/|stylesheets/|file/|upload/|favicon.ico|index.html) {
-
+        location ~ ^/(dist/|bower/|assets/|images/|javascripts/|js/|css/|stylesheets/|file/|favicon.ico|index.html) {
                 root '/usr/share/nginx/html/public/';
                 access_log off;
                 expires 48h;
@@ -94,5 +82,3 @@ http {
     }
     include /etc/nginx/conf.d/*.conf;
 }
-
-
