性能工具测试
增加debug inspector prof 和heapdump的实例

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,8 @@
         "es6": true
     },
     "rules": {
+        "indent": ["error",2, {"SwitchCase": 1}],
         "comma-dangle": 0,
-        "indent": [2, 2, {"SwitchCase": 1}],
         "react/prop-types": 0
     }
 }
